# Vaani

./: .env.example  .gitignore  README.md  gradio_app.py  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  routes.py
app/core/: config.py  exceptions.py  intent_parser.py  router.py
app/schemas/: __init__.py  request_models.py  response_models.py
app/services/: __init__.py  llm_service.py  pipeline_service.py  stt_service.py
app/tools/: __init__.py  code_tool.py  file_tool.py  summary_tool.py
tests/: __init__.py  test_api_pipeline.py  test_app_bootstrap.py  test_gradio_app.py  test_intent_parser.py  test_pipeline_service.py  test_services.py  test_tools_and_router.py
