[project]
name = "vaani"
version = "0.1.0"
description = "Local-first AI voice agent with FastAPI and Gradio."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "gradio>=5.0.0,<6.0.0",
    "groq>=0.18.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "openai>=1.55.0,<2.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-multipart>=0.0.12,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
